tdf#162995 gtk4: Show extra controls in file dialog

While the custom widgets for the file chooser were
created for the gtk4 case as well, they were never
added to the dialog because the call to
`gtk_file_chooser_set_extra_widget` only happens for the
gtk3 VCL plugin.
That GTK function is no longer available in GTK 4.

For gtk4, use gtk_dialog_get_content_area to get
the GtkBox holding the dialog content, and add the
GtkBox holding our custom controls to it manually.

With this in place, it's now e.g. possible to save a
file with password protection by checking the "Save with password"
checkbox in the "File" -> "Save As" dialog.

Currently, too many controls are visible there for gtk4, but that
will be addressed in a separate commit.

Change-Id: If351c24010702e374adb816366892d9ed5280d17
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182609
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>